sprint4/tests/error/18_reassign_var.py
# Re-assigning variable with mismatched type
#
a: str = 'hi'
a = 1
